--- a/Burgerdex/Info.plist
+++ b/Burgerdex/Info.plist
@@ -21,7 +21,9 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>This app requires access to the photo library.</string>
+	<string>Burgerdex needs access to your Photo Library to select presaved burger images.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Allow Burgerdex to access your Camera to take new burger photos.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
