--- a/Burgerdex/Info.plist
+++ b/Burgerdex/Info.plist
@@ -17,15 +17,15 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.2.0</string>
+	<string>1.2.1</string>
 	<key>CFBundleVersion</key>
-	<string>1.1</string>
+	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
 	<string>Allow Burgerdex to access your Camera to take new burger photos.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Burgerdex needs access to your Photo Library to select presaved burger images.</string>
+	<string>Burgerdex needs access to your Photo Library to select pre-saved burger images.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
